apps/finance/actualbudget/production/namespace-finance-actualbudget-production.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/dataplane-mode: ambient
  name: finance-actualbudget-production
