apps/finance/actualbudget/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finance-actualbudget-production
  labels:
    istio.io/dataplane-mode: ambient
