apps/finance/actualbudget/production/actualbudget-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actualbudget
  annotations:
    netamos.com/image: docker.io/actualbudget/actual-server:latest-alpine
    netamos.com/source: image
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: actualbudget
    app.kubernetes.io/managed-by: netamos
    app.kubernetes.io/name: actualbudget
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: actualbudget
  template:
    metadata:
      annotations:
        netamos.com/image: docker.io/actualbudget/actual-server:latest-alpine
        netamos.com/source: image
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/instance: actualbudget
        app.kubernetes.io/managed-by: netamos
        app.kubernetes.io/name: actualbudget
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: actualbudget
        - secretRef:
            name: actualbudget
        image: docker.io/actualbudget/actual-server:latest-alpine
        name: actualbudget
        ports:
        - containerPort: 5006
          name: http
        volumeMounts:
        - mountPath: /data
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: actualbudget
