apps/finance/actualbudget/production/actualbudget-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actualbudget
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: actualbudget
    app.kubernetes.io/managed-by: netamos
    app.kubernetes.io/name: actualbudget
spec:
  ports:
  - name: http
    port: 5006
    targetPort: http
  selector:
    app.kubernetes.io/instance: actualbudget
