apps/finance/actualbudget/production/service-actualbudget.yaml
apiVersion: v1
kind: Service
metadata:
  name: actualbudget
spec:
  ports:
  - name: http
    port: 5006
    targetPort: http
  selector:
    app.kubernetes.io/name: actualbudget
