apps/finance/actualbudget/production/actualbudget-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actualbudget
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: actualbudget
    app.kubernetes.io/managed-by: netamos
    app.kubernetes.io/name: actualbudget
spec:
  hostnames:
  - budget.khuedoan.com
  - budget.production.khuedoan.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: istio-system
  rules:
  - backendRefs:
    - name: actualbudget
      port: 5006
