apps/finance/actualbudget/production/httproute-actualbudget.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actualbudget
  namespace: finance-actualbudget-production
spec:
  hostnames:
  - budget.production.khuedoan.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: istio-system
  rules:
  - backendRefs:
    - name: actualbudget
      port: 5006
    matches:
    - path:
        type: PathPrefix
        value: /
